--- a/client/src/components/OnePageScroll/simple.html
+++ b/client/src/components/OnePageScroll/simple.html
@@ -8,8 +8,6 @@
 </head>
 
 <body>
-
-
     <!-- Dont touch -->
     <script type="text/javascript" src="https://unpkg.com/fullpage.js/dist/fullpage.js"></script>
     <script>
@@ -25,17 +23,29 @@
 
     <div id="fullpage">
         <div class="section" id="section1">
-            <h1>DEMO1</h1>
+            <h1>Product 1</h1>
         </div>
 
         <div class="section" id="section2">
-            Slide 1.1
+            <h1>Product 2</h1>
         </div>
 
-        <div class="section" id="section3"><h1>Slide 3 </h1></div>
+        <div class="section" id="section3">
+            <h1>Slide 3 </h1>
+        </div>
 
         <div class="section" id="section4">
-            Slide 4
+            <h1>Product 4</h1>
+        </div>
+
+
+        <div class="section" id="section5">
+            <h1>Product 5</h1>
+        </div>
+
+
+        <div class="section" id="section6">
+            <h1>Product 6</h1>
         </div>
 
     </div>
