--- a/client/src/views/ProductOnScroll/Product5Mahogany/Mahogany.scss
+++ b/client/src/views/ProductOnScroll/Product5Mahogany/Mahogany.scss
@@ -1,53 +1,11 @@
 @import "../../../utils/utils";
-
-@keyframes backgroundScroll {
-  from {
-    background-position: 0 0;
-  }
-  to {
-    background-position: -1000px 0px;
-  }
-}
-
-@-webkit-keyframes backgroundScroll {
-  from {
-    background-position: 0 0;
-  }
-  to {
-    background-position: -1000px 0px;
-  }
-}
+@import "../ProductOnScroll.scss";
 
 .mahogany {
-  // text-align: center;
-  background-image: url("../../../assets/laundr-assets/patterns/mahogany_pattern.png");
+	// text-align: center;
+	background-image: url("../../../assets/laundr-assets/patterns/mahogany_pattern.png");
 
-  .mockup {
-    background-image: url("../../../assets/laundr-assets/packaging/mahoganymockup.png");
-  }
-}
-
-
-.pattern {
-  background-size: contain;
-  background-repeat: repeat;
-  background-position: center;
-  min-height: 100vh;
-  -webkit-animation: backgroundScroll 30s linear infinite;
-  -webkit-animation-fill-mode: forwards;
-  animation: backgroundScroll 30s linear infinite;
-  animation-fill-mode: forwards;
-}
-
-.mockup {
-  background-size: 150%;
-  transform: rotate(90deg);
-  background-repeat: no-repeat;
-  background-position: center;
-  min-height: 100vh;
-}
-
-.productName {
-  margin-left: 5rem;
-  // padding-top: 20rem;
+	.mockup {
+		background-image: url("../../../assets/laundr-assets/packaging/mahoganymockup.png");
+	}
 }
