Fixed footer sliding

--- a/client/src/components/OnePageScroll/simple.html
+++ b/client/src/components/OnePageScroll/simple.html
@@ -43,9 +43,8 @@
             <h1>Product 5</h1>
         </div>
 
-
-        <div class="section" id="section6">
-            <h1>Product 6</h1>
+        <div class="section fp-auto-height">
+            <div class="content">Four</div>
         </div>
 
     </div>
