--- a/client/src/views/ProductOnScroll/ProductOnScroll.scss
+++ b/client/src/views/ProductOnScroll/ProductOnScroll.scss
@@ -28,7 +28,7 @@
 	animation-fill-mode: forwards;
 }
 .mockup {
-	background-size: 85%;
+	background-size: 30%;
 	transform: rotate(90deg);
 	background-repeat: no-repeat;
 	background-position: center;
@@ -38,4 +38,12 @@
 .productName {
 	margin-left: 5rem;
 	// padding-top: 20rem;
+}
+
+.content {
+	height: 100vh;
+}
+
+#footer{
+	height: 300px;
 }
