reworking products on scroll, minor changes

--- a/client/src/views/ProductOnScroll/ProductOnScroll.scss
+++ b/client/src/views/ProductOnScroll/ProductOnScroll.scss
@@ -29,7 +29,7 @@
 }
 .mockup {
 	background-size: 30%;
-	transform: rotate(90deg);
+	// transform: rotate(90deg);
 	background-repeat: no-repeat;
 	background-position: center;
 	min-height: 100vh;
