modify design of products on scroll, attempt click redirect to descriptions

--- a/client/src/views/ProductOnScroll/Product1Eucalyptus/Eucalyptus.scss
+++ b/client/src/views/ProductOnScroll/Product1Eucalyptus/Eucalyptus.scss
@@ -1,5 +1,5 @@
 @import "../../../utils/utils";
-@import '../ProductOnScroll.scss';
+@import "../ProductOnScroll.scss";
 
 .eucalyptus {
 	// text-align: center;
@@ -7,5 +7,8 @@
 
 	.mockup {
 		background-image: url("../../../assets/laundr-assets/packaging/eucalyptusMockup.png");
+	}
+	.productInfo {
+		background-color: $eucalyptus;
 	}
 }
