--- a/client/src/views/ProductOnScroll/Product2Freshair/FreshAir.scss
+++ b/client/src/views/ProductOnScroll/Product2Freshair/FreshAir.scss
@@ -8,5 +8,9 @@
 	.mockup {
 		background-image: url("../../../assets/laundr-assets/packaging/freshairMockup.png");
 	}
+	
+	.productInfo {
+		background-color: $fresh-air;
+	}
 }
 
