--- a/client/src/views/ProductOnScroll/Product3Gardenia/Gardenia.scss
+++ b/client/src/views/ProductOnScroll/Product3Gardenia/Gardenia.scss
@@ -8,4 +8,8 @@
 	.mockup {
 		background-image: url("../../../assets/laundr-assets/packaging/gardeniaMockup.png");
 	}
+
+	.productInfo {
+		background-color: $white-gardenia;
+	}
 }
