--- a/client/src/views/ProductOnScroll/Product4Vanilla/Vanilla.scss
+++ b/client/src/views/ProductOnScroll/Product4Vanilla/Vanilla.scss
@@ -8,4 +8,7 @@
 	.mockup {
 		background-image: url("../../../assets/laundr-assets/packaging/coffeeMockup.png");
 	}
+	.productInfo {
+		background-color: $coffee-vanilla;
+	}
 }
