--- a/client/src/views/ProductOnScroll/Product5Mahogany/Mahogany.scss
+++ b/client/src/views/ProductOnScroll/Product5Mahogany/Mahogany.scss
@@ -8,4 +8,8 @@
 	.mockup {
 		background-image: url("../../../assets/laundr-assets/packaging/mahoganymockup.png");
 	}
+
+	.productInfo {
+		background-color: $mahogany-teakwood;
+	}
 }
