--- a/client/src/views/ProductOnScroll/Product6Watermelon/Watermelon.scss
+++ b/client/src/views/ProductOnScroll/Product6Watermelon/Watermelon.scss
@@ -8,4 +8,7 @@
 	.mockup {
 		background-image: url("../../../assets/laundr-assets/packaging/watermelonMockup.png");
 	}
+	.productInfo {
+		background-color: $watermelon-cucumber;
+	}
 }
