--- a/client/src/views/Home/Home.scss
+++ b/client/src/views/Home/Home.scss
@@ -40,7 +40,7 @@
 
 .logo-overlay {
 	background-image: url("https://i.imgur.com/tgrjAjf.png");
-	background-size: cover;
+	background-size: contain;
 	background-repeat: no-repeat;
 	background-position: center;
 	min-height: 100vh;
