--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -281,10 +281,11 @@ p {
 	bottom: 0;
 	left: 0;
 	right: 0;
-	background: #333;
-	color: #eee;
+	background: rgb(255, 255, 255);
+	color: rgb(31, 31, 31);
 	overflow: auto;
 	padding: 1em;
+	border-radius: 25px;
 }
 
 /* simulate panel state control --
