--- a/client/src/components/CreditCardForm/CreditCardForm.css
+++ b/client/src/components/CreditCardForm/CreditCardForm.css
@@ -27,8 +27,8 @@
     padding: 0 16px;
 }
 
-.container {
-    background-color: #f2f2f2;
+.container.ml1{
+    background-color: #F9F9F9;
     padding: 5px 20px 15px 20px;
     border: 1px solid lightgrey;
     border-radius: 3px;
