--- a/client/src/views/ProductOnClick/Product1Eucalyptus/Eucalyptus.css
+++ b/client/src/views/ProductOnClick/Product1Eucalyptus/Eucalyptus.css
@@ -2,35 +2,28 @@ body {
     font-size: 1.5em;
     font-family: Arial, Helvetica, sans-serif;
 }
-.section {
+.section{
     position: relative;
     max-width: 920px;
     min-height: 75vh;
     padding: 40px;
     margin: auto;
-
-    color: #ffffff;
-}
-#p1 {
     background-color: #48c9b0;
+    color: #ffffff;
 }
 .section.bg-static {
     background-color: #85c1e9;
-    background-image: url("../../assets/laundr-assets/bombs/Laundr Bomb Angle1.png");
+    background-image: url("../../../assets/laundr-assets/bombs/Laundr Bomb Angle1.png");
     background-size: cover;
     background-position: center;
-
-
 }
 .section .bg-move {
     position: absolute;
     top: 0;
     bottom: 0;
     right: auto;
-    width: 85%;
-    background-image: url("../../assets/laundr-assets/packaging/coffeeMockup.png");
+    width: 100%;
+    background-image: url("../../../assets/laundr-assets/packaging/eucalyptusMockup.png");
     background-size: cover;
     background-position: center;
-    transform: rotate(270deg);
-
 }
