--- a/client/src/views/ProductOnScroll/ProductOnScroll.scss
+++ b/client/src/views/ProductOnScroll/ProductOnScroll.scss
@@ -46,11 +46,12 @@ h2 {
 	animation-fill-mode: forwards;
 }
 .mockup {
-	background-size: 80%;
+	background-size: 60%;
 	// transform: rotate(90deg);
 	background-repeat: no-repeat;
 	background-position: center;
 	min-height: 100vh;
+	margin: 4rem 4rem;
 }
 
 .productName {
